import es.ull.patrones.app.App;
import es.ull.patrones.giu.MyFrame;


public class Main {
    public static void main(String[] args) {
        // Crear App
        App app = new App();
    }
}