package es.ull.patrones.app;

import es.ull.patrones.giu.MyFrame;

public class App {
    public App() {
        MyFrame frame = new MyFrame();
        frame.setVisible(true);
    }
}
