@startuml

title __PROJECT's Class Diagram__\n

  namespace es.ull.patrones {
    class Main {
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.app {
      class es.ull.patrones.app.App {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.data {
      abstract class es.ull.patrones.data.Attribute {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.data {
      class es.ull.patrones.data.CSVReader {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.data {
      class es.ull.patrones.data.Categorical {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.data {
      class es.ull.patrones.data.HTTPFileDownloader {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.data {
      class es.ull.patrones.data.Numeric {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.giu {
      class es.ull.patrones.giu.MyButton {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.giu {
      class es.ull.patrones.giu.MyFrame {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.giu {
      class es.ull.patrones.giu.MyLabel {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.giu {
      class es.ull.patrones.giu.MyPanel {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.graphics {
      class es.ull.patrones.graphics.BarDataset {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.graphics {
      abstract class es.ull.patrones.graphics.CircleGraphics {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.graphics {
      interface es.ull.patrones.graphics.DrawCircleGraphics {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.graphics {
      interface es.ull.patrones.graphics.DrawLinealGraphics {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.graphics {
      class es.ull.patrones.graphics.LineDataset {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.graphics {
      abstract class es.ull.patrones.graphics.LinealGraphics {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.graphics {
      class es.ull.patrones.graphics.MyBarChart {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.graphics {
      class es.ull.patrones.graphics.MyLineChart {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.graphics {
      class es.ull.patrones.graphics.MyPieChart {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.graphics {
      class es.ull.patrones.graphics.PieDataset {
      }
    }
  }
  

  es.ull.patrones.data.Categorical -up-|> es.ull.patrones.data.Attribute
  es.ull.patrones.data.Numeric -up-|> es.ull.patrones.data.Attribute
  es.ull.patrones.giu.MyButton -up-|> javax.swing.JButton
  es.ull.patrones.giu.MyFrame -up-|> javax.swing.JFrame
  es.ull.patrones.giu.MyFrame o-- es.ull.patrones.giu.MyPanel : panel
  es.ull.patrones.giu.MyLabel -up-|> javax.swing.JLabel
  es.ull.patrones.giu.MyPanel -up-|> javax.swing.JPanel
  es.ull.patrones.graphics.BarDataset .up.|> es.ull.patrones.graphics.DrawLinealGraphics
  es.ull.patrones.graphics.CircleGraphics -up-|> org.jfree.ui.ApplicationFrame
  es.ull.patrones.graphics.LineDataset .up.|> es.ull.patrones.graphics.DrawLinealGraphics
  es.ull.patrones.graphics.LinealGraphics -up-|> org.jfree.ui.ApplicationFrame
  es.ull.patrones.graphics.MyBarChart -up-|> es.ull.patrones.graphics.LinealGraphics
  es.ull.patrones.graphics.MyBarChart o-- es.ull.patrones.graphics.DrawLinealGraphics : drawGraphics
  es.ull.patrones.graphics.MyBarChart o-- es.ull.patrones.data.CSVReader : reader
  es.ull.patrones.graphics.MyLineChart -up-|> es.ull.patrones.graphics.LinealGraphics
  es.ull.patrones.graphics.MyLineChart o-- es.ull.patrones.graphics.DrawLinealGraphics : drawGraphics
  es.ull.patrones.graphics.MyLineChart o-- es.ull.patrones.data.CSVReader : reader
  es.ull.patrones.graphics.MyPieChart -up-|> es.ull.patrones.graphics.CircleGraphics
  es.ull.patrones.graphics.MyPieChart o-- es.ull.patrones.graphics.DrawCircleGraphics : drawGraphics
  es.ull.patrones.graphics.MyPieChart o-- es.ull.patrones.data.CSVReader : reader
  es.ull.patrones.graphics.PieDataset .up.|> es.ull.patrones.graphics.DrawCircleGraphics


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
